--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap">
    <div class="Top-Container">
-        <img class="top-cloud" src="C:\Users\JTC\OneDrive\Desktop\Front End Course\Web Development\HTML Personal Site\CSS\CSS My Site\cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="cloud.png" alt="cloud-img">
         <h1 ><em>I'm Umer.</em></h1>
         <p>a <span class="pro">pro</span>grammer.</p>
-        <img class="bottom-cloud" src="C:\Users\JTC\OneDrive\Desktop\Front End Course\Web Development\HTML Personal Site\CSS\CSS My Site\cloud.png" alt="cloud-img">
-        <img src="C:\Users\JTC\OneDrive\Desktop\Front End Course\Web Development\HTML Personal Site\CSS\CSS My Site\mountain.png" alt="mountain-img">
+        <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+        <img src="mountain.png" alt="mountain-img">
         
     </div>
     <hr>
     <div class="middle-container">
         <div class="profile">
-          <img height="200px" width="200px" src="C:\Users\JTC\OneDrive\Desktop\Front End Course\Web Development\HTML Personal Site\CSS\CSS My Site\46047.b-modified.png" alt="Profile">
+          <img height="200px" width="200px" src="46047.b-modified.png" alt="Profile">
           <h2>Hello.</h2>
           <p class="mid-intro">I am a Web Developer & Programmer. I am Professor at UOG. I❤️Black cofffee  </p>
         </div>
@@ -30,12 +30,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="design-skill" src="C:\Users\JTC\OneDrive\Desktop\Front End Course\Web Development\HTML Personal Site\CSS\CSS My Site\computer.png" alt="PC">
+            <img class="design-skill" src="computer.png" alt="PC">
             <h3>Design & Development</h3>
             <p >I Started learning to code when i was 17 years old because i wanted to make my own vedio games. Over time, I have gained a wealth of experience designing & developing mobile and web applications</p>
           </div>
           <div class="skill-row">
-            <img class="hot-skill" src="C:\Users\JTC\OneDrive\Desktop\Front End Course\Web Development\HTML Personal Site\CSS\CSS My Site\chillies.png" alt="HotnSpicy">
+            <img class="hot-skill" src="chillies.png" alt="HotnSpicy">
             <h3>Hot Wings Challenge</h3>
             <p>But my best skill is actually in eating hot wings. I am the undisputed king of hot wings challenge. Ghost Pepper and Carolina Reapers are my favourite snacks.</p>
           </div>
